tests/src/frontend/visibility/invalid/module_private_const.sk
module Foo;

private const bar: Int = 112;
fun ok(): Int {
  bar
}

module end;

fun main(): void {
  _ = Foo.bar;
  print_raw("Fail")
}
